# acua-fact

./: .env.backend.example  .gitignore  Makefile  README.POSTGRESQL.md  README.md  pyproject.toml  script.sql
acua_fact/: main.py
acua_fact/server/: app.py
acua_fact/server/api/: __init__.py  concepto.py  conceptos_factura.py  factura.py  pago.py  persona.py
acua_fact/server/core/: config.py
acua_fact/server/database/: facturacion.db
acua_fact/server/db/: creation.sql  insertion.sql  session.py  sql_script.py
acua_fact/server/models/: concepto.py  concepto_factura.py  factura.py  pago.py  persona.py
acua_fact/server/schemas/: concepto.py  concepto_factura.py  conceptos.py  factura.py  pago.py  persona.py  response.py
acua_fact/ui/: ui.py
acua_fact/ui/services/: concepto.py  concepto_factura.py  consts.py  factura.py  pago.py  pdf.py  persona.py
acua_fact/ui/tabs/: concepto.py  factura.py  pago.py  persona.py
