[tool.poetry]
name = "acu-fact"
version = "0.1.0"
description = ""
authors = ["yersonargote <yersonargotev@unicauca.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["all"], version = "^0.108.0"}
gradio = "^4.13.0"
sqlmodel = "^0.0.14"
asyncpg = "^0.29.0"
pandas = "^2.1.4"
weasyprint = "^60.2"
gradio-calendar = "^0.0.2"
gradio-pdf = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
